--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,7 @@
 header {
+  position: sticky;
+  z-index: 100;
+  top: 0;
   background-color: #6c9a8b;
 }
 
@@ -23,15 +26,15 @@ header {
 }
 
 .blog-title {
+  margin-top: 10px;
   font-family: 'Molle', cursive;
   font-size: 30px;
-  margin-top: 10px;
 }
 
 .nav-item {
+  margin-right: 5px;
   font-weight: 600;
   color: #fff;
-  margin-right: 5px;
 }
 
 .nav-item:last-child {
@@ -40,14 +43,12 @@ header {
 
 @media screen and (min-width: 768px) {
   .container {
-    gap: 5%;
     padding: 15px 5%;
+    gap: 5%;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  
-
   .logo {
     width: 100px;
     max-width: 100px;
