--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,9 @@ a:hover {
 }
 
 main {
+  max-width: 1400px;
   padding: 0 15px;
+  margin: auto;
 }
 
 p {
@@ -55,4 +57,10 @@ img {
   background-color: #ff5d5d;
   color: #fff;
   text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+  main {
+    padding: 0 20px;
+  }
 }
