--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,19 @@
+.home {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto 1fr auto;
+  grid-template-areas: 
+    "header"
+    "hero"
+    "main"
+    "footer";
+  min-height: 100%;
+}
+
 .hero {
   display: none;
   background: url(../img/knitpattern2.jpg) repeat-x;
+  grid-area: hero;
 }
 
 .intro {
@@ -93,7 +106,7 @@
     display: block;
     height: 400px;
   }
-  
+
   .preview {
     grid-template-columns: repeat(3, 1fr);
   }
