--- a/styles/main.css
+++ b/styles/main.css
@@ -50,18 +50,18 @@ img {
 }
 
 ul {
-  list-style: none;
   line-height: 2;
+  list-style: none;
 }
 
 ul li::before {
   content: "";
-  height: 1em;
-  width: 1em;
   display: inline-block;
+  width: 1em;
+  height: 1em;
+  margin: 0 10px 3px 0;
   background-image: url(../img/button.svg);
   background-size: contain;
-  margin: 0 10px 3px 0;
   vertical-align: middle;
 }
 
@@ -72,44 +72,56 @@ h3 {
 }
 
 h1 {
-  font-size: 35px;
   font-weight: 700;
+  font-size: 35px;
 }
 
 h2 {
-  font-size: 28px;
   font-weight: 600;
+  font-size: 28px;
 }
 
 h3 {
-  font-size: 24px;
   font-weight: 600;
+  font-size: 24px;
 }
 
 blockquote p {
-  font-size: 30px;
-  font-family: "Molle", cursive;
   margin: 1em 0 0.5em;
+  font-family: "Molle", cursive;
+  font-size: 30px;
 }
 
 blockquote span {
-  font-size: 14px;
   font-weight: 200;
+  font-size: 14px;
   font-style: italic;
 }
 
 .button {
   display: inline-block;
-  padding: 5px 10px;
+  padding: 5px 0;
   border: 2px solid #ff5d5d;
   border-radius: 5px;
+  background-color: #fff;
   font-weight: 700;
   font-size: 16px;
   text-transform: uppercase;
 }
 
+.button a {
+  padding: 5px 10px;
+}
+
 .button:hover {
   background-color: #ff5d5d;
+}
+
+.button:hover a {
+  color: #fff;
+}
+
+.button a:hover {
   color: #fff;
   text-decoration: none;
 }
